Closed Bug 1119220 Opened 9 years ago Closed 9 years ago

TraceLogger: Fix start/stop messages

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38
Tracking Status
firefox35 --- unaffected
firefox36 --- unaffected
firefox37 --- fixed
firefox38 --- fixed

People

(Reporter: h4writer, Assigned: h4writer)

References

Details

Attachments

(1 file, 1 obsolete file)

The start/stop messages don't always correspond anymore, due to a change a made to fix a windows bug.

This fixes it again.

(found it by a new check I added. Will open a bug to include that eventually)
Attached patch Patch (obsolete) — Splinter Review
Give the IonMonkey start events before doing the arguments checks, which could bail.
Assignee: nobody → hv1989
Attachment #8545905 - Flags: review?(benj)
Blocks: 1065722
Attached patch PatchSplinter Review
Forgot to update the other architectures.
Attachment #8545905 - Attachment is obsolete: true
Attachment #8545905 - Flags: review?(benj)
Attachment #8546535 - Flags: review?(benj)
Comment on attachment 8546535 [details] [diff] [review]
Patch

Review of attachment 8546535 [details] [diff] [review]:
-----------------------------------------------------------------

OK to not block on this particular one, but please open a follow up for erasing all this code duplication in the future... (and as said on irc, code duplication the generateEpilogue() could be avoided as well)
Attachment #8546535 - Flags: review?(benj) → review+
Depends on: 1120924
https://hg.mozilla.org/mozilla-central/rev/335c09bb1c95
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Comment on attachment 8546535 [details] [diff] [review]
Patch

Approval Request Comment
[Feature/regressing bug #]:
Bug 1071546

[User impact if declined]:
Not much impact for regular users. It might annoy few people that they need to wait another release before tracelogger is working well. This just missed the merge, so a bit of a bummer.

[Describe test coverage new/current, TBPL]:
1 day on Inbound.

[Risks and why]: 
Very small risk. Small patch and only used by select public

[String/UUID change made/needed]:
/
Attachment #8546535 - Flags: approval-mozilla-aurora?
Comment on attachment 8546535 [details] [diff] [review]
Patch

Aurora+
Attachment #8546535 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: