Bug 1119220 - TraceLogger: Report start of ionmonkey code, before doing argument checks, r=bbouvier